// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppMenu template is a Vue instance 1`] = `
<b-menu-stub accordion="true" activable="true" class="app-menu section">
  <b-menu-list-stub label="General" ariarole="" size="is-small">
    <div>
      <b-menu-item-stub label="Home" icon="home" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Home" class="has-text-weight-bold"></b-menu-item-stub>
    </div>
    <div>
      <b-menu-item-stub label="Devices" icon="devices" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Devices" class=""></b-menu-item-stub>
    </div>
    <div>
      <b-menu-item-stub label="Networks" icon="lan" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Networks" class=""></b-menu-item-stub>
    </div>
  </b-menu-list-stub>
</b-menu-stub>
`;

exports[`AppMenu template should render devices link 1`] = `
<b-menu-stub accordion="true" activable="true" class="app-menu section">
  <b-menu-list-stub label="General" ariarole="" size="is-small">
    <div>
      <b-menu-item-stub label="Home" icon="home" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Home" class=""></b-menu-item-stub>
    </div>
    <div>
      <b-menu-item-stub label="Devices" icon="devices" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Devices" class="has-text-weight-bold"></b-menu-item-stub>
    </div>
    <div>
      <b-menu-item-stub label="Networks" icon="lan" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Networks" class=""></b-menu-item-stub>
    </div>
  </b-menu-list-stub>
</b-menu-stub>
`;

exports[`AppMenu template should render home link 1`] = `
<b-menu-stub accordion="true" activable="true" class="app-menu section">
  <b-menu-list-stub label="General" ariarole="" size="is-small">
    <div>
      <b-menu-item-stub label="Home" icon="home" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Home" class="has-text-weight-bold"></b-menu-item-stub>
    </div>
    <div>
      <b-menu-item-stub label="Devices" icon="devices" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Devices" class=""></b-menu-item-stub>
    </div>
    <div>
      <b-menu-item-stub label="Networks" icon="lan" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Networks" class=""></b-menu-item-stub>
    </div>
  </b-menu-list-stub>
</b-menu-stub>
`;

exports[`AppMenu template should render networks link 1`] = `
<b-menu-stub accordion="true" activable="true" class="app-menu section">
  <b-menu-list-stub label="General" ariarole="" size="is-small">
    <div>
      <b-menu-item-stub label="Home" icon="home" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Home" class=""></b-menu-item-stub>
    </div>
    <div>
      <b-menu-item-stub label="Devices" icon="devices" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Devices" class=""></b-menu-item-stub>
    </div>
    <div>
      <b-menu-item-stub label="Networks" icon="lan" animation="slide" tag="router-link" ariarole="" size="is-small" to="[object Object]" data-menu="Networks" class="has-text-weight-bold"></b-menu-item-stub>
    </div>
  </b-menu-list-stub>
</b-menu-stub>
`;
